# esphome-deployment

./: .esphome_deployment.yaml  Dockerfile  Makefile  README.md  esphome_deployment.yaml  pyproject.toml
.github/workflows/: dockerx-latest.yml  python_publish.yaml  pythonpackage.yml  release_drafter.yml
esphome_deployment/: cli.py  config.py  const.py  log_stuff.py
esphome_deployment/deployment/: __init__.py  deployment_coordinator.py  deployment_manager.py
esphome_deployment/persistence/: __init__.py
esphome_deployment/ui/: dynamic_bar_column.py  parallel_progress.py  progress.py  progress_aware_logging_handler.py  util.py
esphome_deployment/util/: __init__.py  semver.py
screenshots/: demo.cast
